--- a/service.html
+++ b/service.html
@@ -1,20 +1,22 @@
 <!doctype html>
+<!--https://saturn.csit.rmit.edu.au/~s3789585/wp/a1/-->
 <html>
 <head>
 <meta charset="UTF-8">
-<title>H | Life - Living It Fully Everyday</title>
+<title>Service | Life - Living It Fully Everyday</title>
 <link rel="stylesheet" href="assets/layout.css">
 <link rel="stylesheet" href="assets/navbar.css">
 <link rel="stylesheet" href="assets/footer.css">
+<link rel="stylesheet" href="assets/content.css">
 <link href="https://fonts.googleapis.com/css?family=Noto Sans" rel="stylesheet" type="text/css">
 
 </head>
 
 <body>
 <div class="flex-container">
-	
+
     <!--Nav Bar-->		
-	<div class="navbar sticky">		
+	<div class="navbar">		
 		<div class="nav-container">
 			<div class="logo">
 				<img src="assets/images/LIFE-logos.jpeg" alt="LIFE" style="height:50px;">
@@ -43,16 +45,11 @@
 		</div>
 	</div>
 
-	
-	<!--To avoid sticky nav bar block content-->
-	<div style="margin-bottom: 70px;"></div>
-	
 
-	 <!--Banner Bar-->
-	<div class="banner">
-		test
+	 <!--Announcement Bar-->
+	<div class="accouncements">
+		<a>For the latest Coronavirus (COVID-19) Victoria updates, restrictions, travel permits and exposure sites, visit the Victorian Government's Coronavirus website</a>
 	</div>
-	
 	
 	<!--Main Content Area-->
 	<div class="content">
