--- a/accounts.html
+++ b/accounts.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>H | Life - Living It Fully Everyday</title>
+<title>Contact | Life - Living It Fully Everyday</title>
 <link rel="stylesheet" href="assets/layout.css">
 <link rel="stylesheet" href="assets/navbar.css">
 <link rel="stylesheet" href="assets/footer.css">
@@ -46,11 +46,11 @@
 	
 	<!--To avoid sticky nav bar block content-->
 	<div style="margin-bottom: 70px;"></div>
-	
 
-	 <!--Banner Bar-->
-	<div class="banner">
-		test
+	
+	 <!--Announcement Bar-->
+	<div class="accouncements">
+		<a>For the latest Coronavirus (COVID-19) Victoria updates, restrictions, travel permits and exposure sites, visit the Victorian Government's Coronavirus website</a>
 	</div>
 	
 	
