--- a/contact.html
+++ b/contact.html
@@ -35,10 +35,10 @@
 				</div>
 				
 				<div class="menu item btn login">
-					<a href="accounts.html">Login</a>
+					<a href="login.html">Login</a>
 				</div>
 				<div class="menu item btn register">
-					<a href="accounts.html">Register</a>
+					<a href="register.html">Register</a>
 				</div>
 			</div>
 		</div>
@@ -112,22 +112,21 @@
 				<a style="padding-top: 10px;">By using this site, you agree to our Cookie Policy and Privacy Policy.<br>Copyright 2021 by Peter Liu. All Rights Reserved.</a>
 				<h1 style="font-weight: 700;">Sitemap</h1>
 				<div class="link">
-					<a>Home</a>
-					<a>Service</a>
-					<a>Contact</a>
-					<a>Account</a>
+					<a href="index.html">Home</a>
+					<a href="service.html">Service</a>
+					<a href="contact.html">Contact</a>
+					<a href="register.html">Register</a>
+					<a href="login.html">Login</a>
 				</div>
 			</div>
 	
 				
 			<div id="right">
 				<h1 style="font-weight: 700;">COVID-19 resources</h1>
-				<a herf="https://www.dhhs.vic.gov.au/" target="_blank">Department of Health and Human Services Victoria</a>
-				<a herf="https://www.health.gov.au/" target="_blank">Australian Government Department of Health</a>
-				<a herf="https://business.vic.gov.au/" target="_blank">Buiness Victoria - Support for Victorian businesses</a>
-				<a herf="https://www.australia.gov.au/" target="_blank">Australian Government</a>
-
-		
+				<a href="https://www.dhhs.vic.gov.au/" target="_blank">Department of Health and Human Services Victoria</a>
+				<a href="https://www.health.gov.au/" target="_blank">Australian Government Department of Health</a>
+				<a href="https://business.vic.gov.au/" target="_blank">Buiness Victoria - Support for Victorian businesses</a>
+				<a href="https://www.australia.gov.au/" target="_blank">Australian Government</a>
 			</div>
 		</div>
 	</div>
