--- a/register.html
+++ b/register.html
@@ -65,7 +65,7 @@
           <br>
           <label class="contact-label" for="phone">Phone Number<a> *</a></label>
           <br>
-          <input type="text" id="phone" name="phone" placeholder="Start with +614">
+          <input type="text" id="phone" name="phone" placeholder="Format +61 4XX XXX XXX">
           <br>
           <br>
           <label class="contact-label" for="age">Age<a> *</a></label>
