--- a/login.html
+++ b/login.html
@@ -17,7 +17,7 @@
   <!--Nav Bar-->
   <div class="navbar sticky">
     <div class="nav-container">
-      <div class="logo"> <img src="assets/images/LIFE-logos.jpeg" alt="LIFE" style="height:50px;"> </div>
+      <div class="logo"> <img src="assets/images/LIFE-logos.jpeg" alt="LIFE"> </div>
       <div class="menu">
         <div class="menu item"> <a href="index.html">Home</a> </div>
         <div class="menu item"> <a href="service.html">Service</a> </div>
@@ -31,7 +31,7 @@
   </div>
   
   <!--To avoid sticky nav bar block content-->
-  <div style="margin-bottom: 70px;"></div>
+  <div class="sticky-protect-bar"></div>
   
   <!--Announcement Bar-->
   <div class="accouncements"> <a>For the latest Coronavirus (COVID-19) Victoria updates, restrictions, travel permits and exposure sites, visit the Victorian Government's Coronavirus website</a> </div>
@@ -55,7 +55,7 @@
           <br>
           <br>
           <br>
-          <input class="contact-submit" type="submit" value="Login"  onclick="alertLoginBtnOnClick()">
+          <input class="contact-submit" type="submit" value="Login" onclick="alertLoginBtnOnClick();">
           <br>
           <br>
           <span id="">Not have an account?&nbsp;&nbsp;<a href="register.html">Register</a></span>
@@ -68,13 +68,13 @@
   <!--Footer Area-->
   <div class="footer">
     <div class="footer-container">
-      <div id="left"> <img src="assets/images/LIFE-logos_white.png" alt="LIFE" style="height:50px; width:150px"> <a style="padding-top: 10px;">By using this site, you agree to our Cookie Policy and Privacy Policy.<br>
+      <div id="left"> <img src="assets/images/LIFE-logos_white.png" alt="LIFE"> <a>By using this site, you agree to our Cookie Policy and Privacy Policy.<br>
         Copyright 2021 by Peter Liu. All Rights Reserved.</a>
-        <h1 style="font-weight: 700;">Sitemap</h1>
+        <h1 class="footer-head1">Sitemap</h1>
         <div class="link"> <a href="index.html">Home</a> <a href="service.html">Service</a> <a href="contact.html">Contact</a> <a href="register.html">Register</a> <a href="login.html">Login</a> <br><a href="meal-planner.html">Meal Planner</a></div>
       </div>
       <div id="right">
-        <h1 style="font-weight: 700;">COVID-19 resources</h1>
+        <h1 class="footer-head1">COVID-19 resources</h1>
         <a href="https://www.dhhs.vic.gov.au/" target="_blank">Department of Health and Human Services Victoria</a> <a href="https://www.health.gov.au/" target="_blank">Australian Government Department of Health</a> <a href="https://business.vic.gov.au/" target="_blank">Buiness Victoria - Support for Victorian businesses</a> <a href="https://www.australia.gov.au/" target="_blank">Australian Government</a> </div>
     </div>
   </div>
