--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <div class="menu item"> <a href="contact.html">Contact us</a> </div>
         <div class="menu item btn login"> <a href="login.html">Login</a> </div>
         <div class="menu item btn register"> <a href="register.html">Register</a> </div>
-        <div class="menu item btn meal-planner"> <a href="meal-planner.html">&nbsp; &nbsp; &nbsp;Meal Planner</a> </div>
+        <div class="menu item btn meal-planner"> <a href="healthy-habits.html">&nbsp; &nbsp; &nbsp;Healthy Habits</a> </div>
       </div>
     </div>
   </div>
@@ -50,7 +50,7 @@
       <div class="yellow-container">
         <h2 class="inpara-head2 inpara-container-head inpara-container-yellow-icon">&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; Eat Healthy Planner </h2>
         <span class="inpara-article inpara-container-article">Eating a healthy diet is very important during the COVID-19 pandemic. It can affect our body’s ability to prevent, fight and recover from infections</span>
-        <div class="inpara-container-btn" onClick="location.href='meal-planner.html'">Take a look!</div>
+        <div class="inpara-container-btn" onClick="location.href='healthy-habits.html'">Take a look!</div>
       </div>
       <div class="yellow-container">
         <h2 class="inpara-head2 inpara-container-head inpara-container-yellow-icon">&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; Yoga Class</h2>
@@ -165,7 +165,7 @@
         Copyright 2021 by Peter Liu. All Rights Reserved.</a>
         <h1 class="footer-head1">Sitemap</h1>
         <div class="link"> <a href="index.html">Home</a> <a href="service.html">Service</a> <a href="contact.html">Contact</a> <a href="register.html">Register</a> <a href="login.html">Login</a> <br>
-          <a href="meal-planner.html">Meal Planner</a></div>
+          <a href="healthy-habits.html">Healthy Habits</a></div>
       </div>
       <div id="right">
         <h1 class="footer-head1">COVID-19 resources</h1>
