--- a/services-meditation.html
+++ b/services-meditation.html
@@ -32,13 +32,13 @@
         <div class="menu item"> <a href="contact.html">Contact us</a> </div>
         <div class="menu item btn login"> <a href="login.html">Login</a> </div>
         <div class="menu item btn register"> <a href="register.html">Register</a> </div>
-        <div class="menu item btn meal-planner"> <a href="meal-planner.html">&nbsp; &nbsp; &nbsp;Meal Planner</a> </div>
+        <div class="menu item btn meal-planner"> <a href="healthy-habits.html">&nbsp; &nbsp; &nbsp;Healthy Habits</a> </div>
       </div>
     </div>
   </div>
   
   <!--Announcement Bar-->
-  <div class="accouncements"> <a>For the latest Coronavirus (COVID-19) Victoria updates, restrictions, travel permits and exposure sites, visit the Victorian Government's Coronavirus website</a> </div>
+  <div class="announcements"> <a>For the latest Coronavirus (COVID-19) Victoria updates, restrictions, travel permits and exposure sites, visit the Victorian Government's Coronavirus website</a> </div>
   
   <!--Main Content Area-->
   <div class="content" id="service-page">
@@ -89,7 +89,7 @@
       <div id="left"> <img src="assets/images/LIFE-logos_white.png" alt="LIFE"> <a>By using this site, you agree to our Cookie Policy and Privacy Policy.<br>
         Copyright 2021 by Peter Liu. All Rights Reserved.</a>
         <h1 class="footer-head1">Sitemap</h1>
-        <div class="link"> <a href="index.html">Home</a> <a href="service.html">Service</a> <a href="contact.html">Contact</a> <a href="register.html">Register</a> <a href="login.html">Login</a> <br><a href="meal-planner.html">Meal Planner</a></div>
+        <div class="link"> <a href="index.html">Home</a> <a href="service.html">Service</a> <a href="contact.html">Contact</a> <a href="register.html">Register</a> <a href="login.html">Login</a> <br><a href="healthy-habits.html">Healthy Habits</a></div>
       </div>
       <div id="right">
         <h1 class="footer-head1">COVID-19 resources</h1>
